--- a/docs/Reflection/Reflection.tex
+++ b/docs/Reflection/Reflection.tex
@@ -20,7 +20,7 @@
 \toprule
 \textbf{Date} & \textbf{Developer(s)} & \textbf{Change}\\
 \midrule
-March 30 2023 & Jared Bentvelsen & Revision 1\\
+March 30 2023 & All Olympian Team Members & Revision 1\\
 \bottomrule
 \end{tabularx}
 \end{table}
