--- a/docs/SRS/SRS.tex
+++ b/docs/SRS/SRS.tex
@@ -459,13 +459,13 @@ Description: The product shall be able to visually display fitness progress towa
 	\\ Fit Criterion: Application will increase understandability through the usage of text, symbols, and images.
 \end{itemize}
 \subsubsection{Accessibility Requirements}
-\noindent \begin{itemize}
-	% \item[NFR\refstepcounter{nfrnum}\thenfrnum:]
-	% The product shall be usable by users with hearing loss or partial blindness.
-	% \\ Rationale: 
-	% \\ Fit Criterion: 
-	\item N/A
-\end{itemize}
+% \noindent \begin{itemize}
+% 	% \item[NFR\refstepcounter{nfrnum}\thenfrnum:]
+% 	% The product shall be usable by users with hearing loss or partial blindness.
+% 	% \\ Rationale: 
+% 	% \\ Fit Criterion: 
+% 	\item N/A
+% \end{itemize}
 \noindent \begin{itemize}
 	\item[NFR\refstepcounter{nfrnum}\thenfrnum:]
 	The product shall make use of sufficiently contrasting colours.
@@ -534,9 +534,9 @@ Description: The product shall be able to visually display fitness progress towa
   \subsubsection{Requirements for Interfacing with Adjacent Systems}
     \noindent\begin{itemize}
       \item[NFR\refstepcounter{nfrnum}\thenfrnum:] 
-        The application shall operate on iOS devices 
-		\\ Rationale: Users on i0S devices will be able to utilize the application.
-		\\ Fit Criterion: The application will be completely tailored to i0S devices.
+        The application shall operate on iOS and Android devices 
+		\\ Rationale: Users on i0S and Android devices will be able to utilize the application.
+		\\ Fit Criterion: The application will be completely tailored to i0S and Android devices.
     \end{itemize}  
   \subsubsection{Productization Requirements}
     \noindent\begin{itemize}
@@ -779,7 +779,7 @@ Description: The product shall be able to visually display fitness progress towa
 		GS & Goal Statement\\
 		% IM & Instance Model\\
 		LC & Likely Change\\
-		NFR & Non-Functional Requirement
+		NFR & Non-Functional Requirement\\
 		PS & Physical System Description\\
 		R & Requirement\\
 		SRS & Software Requirements Specification\\
