Hazard analysis PDF

--- a/docs/HazardAnalysis/HazardAnalysis.tex
+++ b/docs/HazardAnalysis/HazardAnalysis.tex
@@ -62,6 +62,7 @@
 			\textbf{Date} & \textbf{Developer(s)} & \textbf{Change}\\
 			\midrule
 			19/10/22 & All & Initial Draft\\
+			05/04/23 & All & Revision 1\\
 			\bottomrule
 		\end{tabularx}
 	\end{table}
