--- a/docs/Design/MIS/MIS.tex
+++ b/docs/Design/MIS/MIS.tex
@@ -53,8 +53,8 @@ urlcolor=cyan          % color of external links
 \begin{tabularx}{\textwidth}{p{3cm}p{2cm}X}
 \toprule {\bf Date} & {\bf Version} & {\bf Notes}\\
 \midrule
-Date 1 & 1.0 & Initial Draft\\
-Date 2 & 1.1 & Added followers and updated modules to align with previous documents better \\
+January 18 2023 & 1.0 & Initial Draft\\
+April 4 2023 & Added followers and updated modules to align with previous documents better \\
 \bottomrule
 \end{tabularx}
 
